--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,10 +2,9 @@ name: Go
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
+    tags:
+      - '*'
+      
 jobs:
 
   goreleaser:
